# Arcdoc

./: ARCDOC.CBP  ARCDOC.layout  Arcdoc.depend  CMakeLists.txt  COMMANDS.md  README.md  in.txt  main.cpp
format projects/debug/: debug.cbp  debug.depend  debug.layout  main.cpp
include/: action.h  colors.h  core.h  generator.h  inter.h  inter.h.save-failed  module.h  tokens.h  tokens.h.save-failed
lang projects/cpp/: cpp.cbp  cpp.depend  cpp.layout  main.cpp  main.cpp.save-failed
langs/: libcpp.def
src/: action.cpp  core.cpp  generator.cpp  inter.cpp  module.cpp
test/: test1.h  test2.h
